Fixed: wflow-core - Form - Unwanted gap appear on top of a subform when section does not has a title. @8.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/css/form8.css
+++ b/wflow-consoleweb/src/main/webapp/css/form8.css
@@ -142,6 +142,9 @@ body .subform-cell > .subform-container.has-frame, .form-cell > .subform-contain
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
 }
+.form-section.no_label > .form-column:nth-child(2) > .subform-cell:first-child > .subform-container.no-frame:first-child {
+    margin-top: -20px;
+}
 
 /* input */
 input:not([type]),
